# info-patterns-repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_com_case.ipynb  02_librational_case.ipynb  03_maxdetection_efficiency.ipynb  04_arbitrary_incident_field.ipynb  05_force_and_torque.ipynb  06_filling_factor.ipynb  07_recoil_heating.ipynb  com_sphere.ipynb  com_sphere_maxdetection.ipynb  com_sphere_recoil_heating.ipynb  com_sphere_richards_wolf_field.ipynb  lib_ellipsoid_force_torque.ipynb  lib_ellipsoid_pmefield.ipynb
src/: constants.py  generate_nanoparticle.py  information_patterns_simulation.py  light_matter_interaction_simulation.py  measurment_tools.py  parameters.py  plots.py  specific_incident_fields.py
src/info_patterns/: __init__.py  generate_nanoparticle.py  information_patterns_simulation.py  light_matter_interaction_simulation.py  measurement_tools.py  parameters.py
src/info_patterns_repo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
