[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "info-patterns-repo"
version = "0.1.0"
description = "Simulation tools for optical information patterns of nanoparticles."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sebastian Gutierrez-Bernal" }
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "ipykernel",
    "pyGDM2"
]

[tool.setuptools.packages.find]
where = ["src"]