[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "info-patterns"
version = "0.1.0"
description = "Optical information-pattern simulations for nanoparticles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pyGDM2",
]

[tool.setuptools.packages.find]
where = ["src"]